[wcag] Fix colour contrast on privacy link

--- a/ckanext/nhm/theme/less/nhm.less
+++ b/ckanext/nhm/theme/less/nhm.less
@@ -1402,6 +1402,10 @@ input[type="radio"], input[type="checkbox"] {
   padding: 10px 0 5px 0;
   font-size: 75%;
   border-top: 1px solid @grey6;
+
+  & a {
+    color: @primary2 !important;
+  }
 }
 
 .search-button(@button-size, @button-pad) {
